# CryptoFeeder

./: .gitignore  Cargo.toml  event_packet.md
config/: config.ini  endpoint.ini  symbol_config copy.ini  symbol_config.ini
exchange_protocol/: feed_binance.md  feed_bybit.md  feed_okx.md  standardization_guide.md
project_detail/: architecture.md  checkpoints.md  commit_convention.md  protocol_spec.md  purpose.md  validation_and_testing.md  work_instruction.md
src/: config.rs  connection_manager.rs  data_parser.rs  errors.rs  events.rs  lib.rs  main.rs  packet_builder.rs  protocol.rs  udp_broadcaster.rs
udp_packet_detail/: udp_packet.md
